# Kairos-Psychologist-AI

./: .gitignore  BRAIN_ARCHITECTURE.md  CLAUDE.md  LEGAL_REVIEW_CHECKLIST.md  PROGRESS.md  README.en.md  README.md  README.zh.md  ROADMAP.md  docker-compose.dev.yml
backend/: .env.example  alembic.ini  celery_worker.py  pyproject.toml
backend/agents/: ARCHITECTURE.md  __init__.py  runner.py
backend/agents/brain/: __init__.py  aggregator_agent.py  integrator_agent.py  module_builder_agent.py  orchestrator_agent.py  re_review_agent.py  researcher_agent.py  validation_agent.py
backend/agents/culture/: __init__.py
backend/agents/shared/: __init__.py  base_agent.py  knowledge_base.py  pubmed_client.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  2026_04_30_0044-013ad5825535_initial_tables.py  2026_05_05_1844-ee0442b52fa4_add_dossier_tables.py  (+7 more)
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/scripts/: check_llm_connectivity.py  inspect_dossier.py  link_guest_sessions.py  reset_checkpoint.py  start_celery.cmd  test_extract_live.py
backend/tests/: conftest.py  test_account_deletion.py  test_anonymizer.py  test_auth_api.py  test_chat.py  test_chat_perception.py  test_chat_with_asq_positive.py  test_config.py  test_consent_api.py  test_crisis.py  test_crisis_contacts_sync.py  test_crisis_prompt_age_routing.py  test_dossier_api.py  test_error_handler.py  test_llm.py  test_mock_llm.py  test_prompts.py  test_research_export.py  test_screening.py  test_security.py  test_sessions_api.py  test_therapy_router.py
frontend/: .gitignore  (+6 more)
(+250 files in other folders)
