[project]
name = "kairos-backend"
version = "0.1.0"
description = "Kairos — AI-сервис психологической первой помощи"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",

    # === База данных (Блок 6a) ===
    "sqlalchemy[asyncio]>=2.0.30",   # ORM с async-поддержкой
    "aiosqlite>=0.20.0",              # SQLite драйвер для разработки
    "asyncpg>=0.30.0",                # PostgreSQL драйвер для продакшена
    "alembic>=1.13.0",                # Миграции БД

    # === Агенты (Блоки 47-55) ===
    "pyyaml>=6.0",                    # Сериализация эталонных статей в YAML
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
